stylesheet.css
h1 {
    font-size: 2.5em;
    text-align: center;
}

a {
    color: #ecf0f1;
    text-decoration: none;
}

ul {
    list-style-type: none;
}

.title {
    color: #ecf0f1;
    font-size: 4em;
    font-family: Roboto;
    text-align: center;
    margin: 10px 0 10px 0;
}

.general {
    background-color: #34495e;
    color: #ecf0f1;
    font-size: 1em;
    font-family: Roboto;
}

#header {
    background-color: #2c3e50;
    margin-top: 15px;
    margin-left: 15px;
    margin-right: 15px;
    margin-bottom: 10px;
    border: 0px 0px 0px 0px;
    padding: 5px 0px 5px 0px;

    box-shadow: 5px 5px 10px rgba(0, 0, 0, .4)

    /*position: relative;
    top: -10px;
    */
}

#headshot {
    width: 100%;
}

#pic {
    text-align: center;
    width: 300px;
    height: 200px;
    margin: auto;
    border: 10px solid #2c3e50;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, .4)
}

#leftblock {
    display: inline-block;
    width: 45%;
    top: 10px;
    vertical-align: top;
}

#rightblock {
    display: inline-block;
    width: 45%;
    top: 10px;
    vertical-align: top;
}

